# DDICDI_generator

./: .deployment  .gitignore  API_DOCUMENTATION.md  API_QUICK_START.md  DDICDI_converter.ipynb  DDICDI_converter_JSON-LD_incremental.py  DDICDI_converter_JSONLD_incremental.py  DDICDI_converter_xml.ipynb  DDICDI_converter_xml.py  DDICDI_converter_xml_incremental.py  FIXES_SUMMARY.md  IMPLEMENTATION_PLAN_RDF_FORMATS.md  RDF_FORMATS_IMPLEMENTATION_SUMMARY.md  README.md  REPLY_TO_PASCAL.txt  api.py  app.py  app_content.py  app_content_json.py  app_json.py  azure.yaml  bbeuster_pythonanywhere_com_wsgi.py  deployment_notes_pythonanywhere.txt  format_converter.py  json_changes.txt  lists.txt  output.nt  output.xml  output_api_clean.jsonld  pyproject.toml  requirements.txt  spss_import.py  startup.sh  startup.txt  testing.py  validation_notes.md  xml_functions.py  xml_test.ipynb
.github/workflows/: master_ddi-cdi-converter-app.yml  master_ddi-cdi-converter.yml  master_ddicdi-generator-app.yml
files/: ESS10-subset.sav  ESS11-subset.csv  ESS11-subset.dta  ESS11-subset.sav  Wave2_temp.dta  stata.sav  test.sav  wave2_useragent.dta
userguide/: userguide.md  userguide.txt
